@@ -31,6 +31,7 @@ Template for new versions:
 ## New Features
 
 ## Fixes
+- `suspendmanager`: fix errors when constructing near the map edge
 
 ## Misc Improvements
 
